--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,8 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
+
+    
 }
